--- a/menu.css
+++ b/menu.css
@@ -187,21 +187,126 @@ button.search-btn {
         width: 100%;
     }
 }
-@media (max-width: 1024px)  {
-    .container{
-        padding-inline: 1em;
-        
-    }
-        .product_items{
-            width: calc((100% - 2em)/2);
-        
-        }
+/* Add this at the end of your existing menu.css file */
+
+/* Responsive Media Queries */
+@media (max-width: 1200px) {
+    .navdiv {
+        flex-direction: column;
+        padding: 15px 0;
     }
     
+    .logo {
+        margin-bottom: 15px;
+    }
+    
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    li {
+        margin: 5px 10px;
+    }
+    
+    .search-container {
+        order: -1;
+        width: 100%;
+        margin: 10px 0;
+    }
+    
+    .button_signUp,
+    .button_login {
+        margin: 5px;
+        width: 120px;
+    }
+}
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
     .product_items {
+        width: calc((100% - 2em)/2);
+    }
+    
+    .product_items_image {
+        height: 25vh;
+    }
+    
+    .product_item_image_description h2 {
+        font-size: 18px;
+    }
+    
+    li a {
+        margin-right: 20px;
+        font-size: 11px;
+    }
+    
+    .button_signUp,
+    .button_login {
+        width: 100px;
+        padding: 8px;
+    }
+    
+    button a {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    .container {
+        width: 95%;
+        padding-inline: 0.5em;
+    }
+    
+    .product_items {
+        width: 100%;
+        padding: 1.5em;
+    }
+    
+    .product_items_image {
+        height: 20vh;
+    }
+    
+    .logo a {
+        font-size: 30px;
+    }
+    
+    ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    li {
+        margin: 5px 0;
+    }
+    
+    .search-container {
+        margin: 10px 0;
+    }
+    
+    .search-input {
         width: 100%;
     }
     
-} 
+    .button_signUp,
+    .button_login {
+        width: 80px;
+        padding: 5px;
+        margin: 5px 0;
+    }
+    
+    button a {
+        font-size: 10px;
+    }
+}
+
+/* Landscape orientation for mobile devices */
+@media (max-width: 768px) and (orientation: landscape) {
+    .product_items {
+        width: calc((100% - 2em)/2);
+    }
+    
+    .product_items_image {
+        height: 35vh;
+    }
+}
